@@ -1,5 +1,5 @@
 /*
- * $Id: cache_cf.cc,v 1.144 1996/11/25 18:47:15 wessels Exp $
+ * $Id: cache_cf.cc,v 1.145 1996/11/25 18:50:28 wessels Exp $
  *
  * DEBUG: section 3     Configuration File Parsing
  * AUTHOR: Harvest Derived
@@ -494,6 +494,8 @@ parseCacheHostLine(void)
 	    weight = atoi(token + 7);
 	} else if (!strncasecmp(token, "ttl=", 4)) {
 	    mcast_ttl = atoi(token + 4);
+	} else if (!strncasecmp(token, "default", 7)) {
+	    options |= NEIGHBOR_DEFAULT_PARENT;
 	} else {
 	    debug(3, 0, "parseCacheHostLine: token='%s'\n", token);
 	    self_destruct();
